8218055: Use ToolProvider instead of AppRuntimeImageBuilder
Reviewed-by: almatvee